@@ -1,7 +1,7 @@
 Package: pwOmics
 Type: Package
 Title: Pathway-based data integration of omics data
-Version: 1.1.10
+Version: 1.1.11
 Date: 2014-12-29
 Author: Astrid Wachter <Astrid.Wachter@med.uni-goettingen.de>
 Maintainer: Astrid Wachter <Astrid.Wachter@med.uni-goettingen.de>
